--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "UltraWideo",
   "description": "Upscale or stretch any video on the web, to make it look great on UltraWide screens.",
-  "version": "1.1",
+  "version": "1.2",
   "author": "Nenad Novaković - dvlden",
   "manifest_version": 2,
   "background": {
@@ -19,6 +19,7 @@
   "permissions": ["storage"],
   "content_scripts": [{
     "matches": ["*://*/*"],
+    "all_frames": true,
     "js": ["dist/scripts/inject.js"],
     "css": ["dist/styles/inject.css"]
   }],
