--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -43,36 +43,37 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^9.6.1",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "autoprefixer": "^9.7.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "fibers": "^4.0.2",
     "file-loader": "^4.2.0",
     "generate-json-webpack-plugin": "^0.3.1",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^5.0.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
-    "sass": "^1.22.10",
-    "sass-loader": "^7.3.1",
-    "sinon": "^7.4.1",
+    "sass": "^1.23.3",
+    "sass-loader": "^8.0.0",
+    "sinon": "^7.5.0",
     "sinon-chrome": "^3.0.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-fix-style-only-entries": "^0.3.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-fix-style-only-entries": "^0.4.0",
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
     "eventemitter3": "^4.0.0",
-    "webextension-polyfill": "^0.4.0"
+    "webextension-polyfill": "^0.5.0"
   }
 }
