--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -10,8 +10,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "webpack --watch --progress --hide-modules --mode development",
-    "build": "webpack --progress --hide-modules --mode production && rimraf dist/scripts/welcome.js",
+    "dev": "webpack --watch --mode development",
+    "build": "webpack --mode production && rimraf dist/scripts/welcome.js",
     "test": "jest --coverage",
     "test:watch": "npm run test -- --watchAll",
     "badges": "istanbul-badges-readme"
@@ -53,35 +53,36 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^10.0.1",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.2.0",
-    "css-loader": "^4.3.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.2.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
     "fibers": "^5.0.0",
-    "file-loader": "^6.1.0",
-    "generate-json-webpack-plugin": "^1.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "husky": "^4.3.0",
+    "file-loader": "^6.2.0",
+    "generate-json-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.0.0-alpha.6",
+    "husky": "^4.3.6",
     "image-webpack-loader": "^7.0.1",
-    "istanbul-badges-readme": "^1.0.5",
-    "jest": "^26.4.2",
-    "mini-css-extract-plugin": "^0.11.3",
-    "postcss-loader": "^4.0.3",
+    "istanbul-badges-readme": "^1.2.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss-loader": "^4.1.0",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0",
     "sinon-chrome": "^3.0.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "zip-webpack-plugin": "^3.0.0"
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
+    "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
     "eventemitter3": "^4.0.7",
-    "webextension-polyfill": "^0.6.0"
+    "webextension-polyfill": "^0.7.0"
   }
 }
