--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -53,31 +53,31 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "autoprefixer": "^10.2.4",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
+    "copy-webpack-plugin": "^8.0.0",
+    "css-loader": "^5.1.1",
     "cssnano": "^4.1.10",
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
     "generate-json-webpack-plugin": "^2.0.0",
-    "html-webpack-plugin": "^5.0.0-alpha.6",
-    "husky": "^4.3.8",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^5.1.3",
     "image-webpack-loader": "^7.0.1",
-    "istanbul-badges-readme": "^1.2.0",
-    "mini-css-extract-plugin": "^1.3.5",
-    "postcss-loader": "^4.2.0",
-    "pug": "^3.0.0",
+    "istanbul-badges-readme": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.9",
+    "postcss-loader": "^5.1.0",
+    "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "sinon-chrome": "^3.0.1",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0",
     "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
