--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -12,10 +12,9 @@
   "scripts": {
     "dev": "webpack --watch --mode development",
     "build": "webpack --mode production && rimraf dist/scripts/welcome.js",
-    "test": "jest --coverage",
-    "test:watch": "npm run test -- --watchAll",
+    "test": "jest",
     "badges": "istanbul-badges-readme",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "homepage": "https://github.com/dvlden/ultrawideo#readme",
   "bugs": "https://github.com/dvlden/ultrawideo/issues",
@@ -40,37 +39,29 @@
     "last 1 major version",
     "> 1%"
   ],
-  "jest": {
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/scripts/$1"
-    },
-    "coverageReporters": [
-      "json-summary"
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.0.0",
-    "css-loader": "^5.1.1",
-    "cssnano": "^4.1.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.11",
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
     "generate-json-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
-    "husky": "^5.1.3",
-    "image-webpack-loader": "^7.0.1",
+    "husky": "^7.0.4",
+    "image-webpack-loader": "^8.0.1",
     "istanbul-badges-readme": "^1.2.1",
-    "mini-css-extract-plugin": "^1.3.9",
-    "postcss-loader": "^5.1.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.0",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^12.3.0",
     "sinon-chrome": "^3.0.1",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
@@ -78,7 +69,7 @@
   },
   "dependencies": {
     "eventemitter3": "^4.0.7",
-    "jest": "^26.6.3",
-    "webextension-polyfill": "^0.7.0"
+    "jest": "^27.3.1",
+    "webextension-polyfill": "^0.8.0"
   }
 }
