--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.5.1",
+  "version": "2.5.2",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -40,35 +40,36 @@
     "> 1%"
   ],
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "autoprefixer": "^10.4.4",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.4",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.3",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "cssnano": "^5.1.7",
+    "cssnano": "^5.1.12",
     "fibers": "^5.0.1",
     "file-loader": "^6.2.0",
     "generate-json-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "image-webpack-loader": "^8.1.0",
-    "istanbul-badges-readme": "^1.8.1",
-    "jest": "^27.5.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "postcss-loader": "^6.2.1",
+    "istanbul-badges-readme": "^1.8.2",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.1",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
-    "sass": "^1.50.0",
-    "sass-loader": "^12.6.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "sinon-chrome": "^3.0.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
     "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
+    "@webdiscus/pug-loader": "^2.7.2",
     "eventemitter3": "^4.0.7",
     "webextension-polyfill": "^0.9.0"
   }
