--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ultrawideo",
   "description": "The cross-browser extension that manipulates video aspect ratio to fit your entire screen.",
-  "version": "2.5.2",
+  "version": "2.5.5",
   "private": true,
   "author": {
     "name": "Nenad Novaković",
@@ -40,37 +40,40 @@
     "> 1%"
   ],
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "autoprefixer": "^10.4.7",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@webdiscus/pug-loader": "^2.10.2",
+    "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "cssnano": "^5.1.12",
-    "fibers": "^5.0.1",
+    "css-loader": "^6.7.3",
+    "cssnano": "^5.1.14",
+    "enhanced-resolve": "^5.12.0",
     "file-loader": "^6.2.0",
     "generate-json-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "image-webpack-loader": "^8.1.0",
-    "istanbul-badges-readme": "^1.8.2",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss-loader": "^7.0.1",
+    "istanbul-badges-readme": "^1.8.4",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
     "pug": "^3.0.2",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
+    "rimraf": "^4.1.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "sinon-chrome": "^3.0.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-sources": "*",
     "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
-    "@webdiscus/pug-loader": "^2.7.2",
-    "eventemitter3": "^4.0.7",
-    "webextension-polyfill": "^0.9.0"
+    "eventemitter3": "^5.0.0",
+    "webextension-polyfill": "^0.10.0"
   }
 }
